--- a/packages/theme-chalk/package.json
+++ b/packages/theme-chalk/package.json
@@ -19,7 +19,7 @@
     "element",
     "theme"
   ],
-  "author": "yi.shyang@ele.me",
+  "author": "goocan",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ElementUI/theme-chalk/issues"
