--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18n": "node build/bin/i18n.js",
     "lint": "eslint src/**/* test/**/* packages/**/* build/**/* --quiet",
     "pub": "yarn run bootstrap && sh build/git-release.sh && sh build/release.sh",
+    "deploy:docs": "sh build/deploy-docs.sh",
     "test": "yarn run lint && yarn run build:theme && cross-env CI_ENV=/dev/ BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test:watch": "yarn run build:theme && cross-env BABEL_ENV=test karma start test/unit/karma.conf.js"
   },
