--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goocan-pc-ui",
+  "name": "@goocan/goocan-pc-ui",
   "version": "2.15.15",
   "description": "A Component Library for Vue.js.",
   "main": "lib/element-ui.common.js",
@@ -47,9 +47,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:ElemeFE/element.git"
+    "url": "git@github.com:goocanFE/goocan-pc-ui.git"
   },
-  "homepage": "http://element.eleme.io",
+  "homepage": "https://goocan-pc-ui.goocan.net",
   "keywords": [
     "eleme",
     "vue",
@@ -57,7 +57,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ElemeFE/element/issues"
+    "url": "https://github.com/goocanFE/goocan-pc-ui/issues"
   },
   "unpkg": "lib/index.js",
   "style": "lib/theme-chalk/index.css",
