--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@goocan/goocan-pc-ui",
+  "name": "goocan-pc-ui",
   "version": "2.16.3",
   "description": "A Component Library for Vue.js.",
   "main": "lib/element-ui.common.js",
